# bsim-demo

./: .gitignore  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: setup-env.sh  west-cache.sh
gatt-bug/: build.sh  debug.sh  pcap.sh  run.sh
gatt-bug/central/: prj.conf
gatt-bug/central/src/: main.c
gatt-bug/peripheral/src/: main.c
python-demo/: CMakeLists.txt  ble-host.py  run.sh
python-demo/drivers/: CMakeLists.txt  Kconfig  uart_posix_pipe.c
python-demo/dts/bindings/: zephyr,posix-pipe.yaml
python-demo/firmware/hci_sim/: CMakeLists.txt  README.md  app.overlay  prj.conf
python-demo/firmware/observer/: CMakeLists.txt  prj.conf
python-demo/firmware/observer/src/: main.c
zephyr/: module.yml
